--- a/src/app/pages/quiz/module/add-module/add-module.component.html
+++ b/src/app/pages/quiz/module/add-module/add-module.component.html
@@ -26,6 +26,17 @@
                         <br>
                         <input class="form-control" ngModel="" type="number" name="nbr_questions"  placeholder="number of questions" required/>
                         <br>
+                        <select  class="form-control"  name="level" [(ngModel)]="level">
+                          <option value="1">Level 1</option>
+                          <option value="2">Level 2</option>
+                          <option value="3">Level 3</option>
+                          <option value="4">Level 4</option>
+                          <option value="5">Level 5</option>
+                          <option value="6">Level 6</option>
+                          <option value="7">Level 7</option>
+                          <option value="8">Level 8</option>
+                        </select>
+                        <br> <br>
                         <button [disabled]="!f.valid"  type="submit" class="btn btn-primary">Save</button>
                         <button type="button" (click)="returnToModule()" class="btn btn-danger">Cancel</button>
                       </form>
