--- a/src/app/pages/quiz/module/update-module/update-module.component.html
+++ b/src/app/pages/quiz/module/update-module/update-module.component.html
@@ -23,6 +23,16 @@
                     <br>
                     <input class="form-control" [(ngModel)]="module.nbr_questions" type="text" placeholder="Module number of questions" required/>
                     <br>
+                    <select  class="form-control"  name="level" [(ngModel)]="module.level">
+                      <option value="1">Level 1</option>
+                      <option value="2">Level 2</option>
+                      <option value="3">Level 3</option>
+                      <option value="4">Level 4</option>
+                      <option value="5">Level 5</option>
+                      <option value="6">Level 6</option>
+                      <option value="7">Level 7</option>
+                      <option value="8">Level 8</option>
+                    </select> <br> <br>
                     <button class="btn btn-success" (click)="update()" >Save </button>
                     <button type="button" (click)="returnToModule()" class="btn btn-danger">Cancel</button>
                     <!-- formumaire update starts-->
