--- a/src/app/pages/quiz/module/quiz.component.html
+++ b/src/app/pages/quiz/module/quiz.component.html
@@ -26,7 +26,7 @@
                       <tr>
                         <th>Title</th>
                         <th>Time</th>
-                        <th>number of questions</th>
+                        <th>Total Questions</th>
                         <th>Operations</th>
                       </tr>
                       </thead>
