--- a/src/app/pages/quiz/quiz-test/listQuiz/quiz-test.component.html
+++ b/src/app/pages/quiz/quiz-test/listQuiz/quiz-test.component.html
@@ -18,6 +18,7 @@
                   </div>
                   <div class="card-block">
                     <!--Questions Start-->
+
                     <ng-template #content let-c="close" let-d="dismiss">
                       <div class="modal-header">
                         <h4 class="modal-title">View Question</h4>
@@ -65,37 +66,48 @@
                       </div>
                     </ng-template>
 
-
                     <input type="text" [(ngModel)]="searchText" name="searchText" placeholder="Search...">
                     <hr>
                     <button type="button" class="btn btn-primary" (click)="newQuestion()">New Question</button>
-                    <table show-filter="true" class="table">
-                      <thead>
-                      <tr>
-                        <th>Question</th>
-                        <th>Operations</th>
-                      </tr>
-                      </thead>
-                      <tbody>
-                      <tr
-                        *ngFor="let q of questions |filter: searchText | paginate: { itemsPerPage: 6, currentPage: p}">
-                        <td> {{q.questionName}}</td>
-                        <td>
-                          <a class="primary" data-original-title="" title=""
-                             (click)="open(content,q.questionName,q.id)">
-                            <i class="ft-eye font-medium-3 mr-2"></i>
-                          </a>
-                          <a class="success p-0" data-original-title="" title="" (click)="onUpadate(q.id)">
-                            <i class="ft-edit-2 font-medium-3 mr-2"></i>
-                          </a>
-                          <a class="danger" data-original-title="" title="" (click)="onDelete(q)">
-                            <i class="ft-trash font-medium-3"></i>
-                          </a>
-                        </td>
-                      </tr>
-                      <pagination-controls (pageChange)="p = $event"></pagination-controls>
-                      </tbody>
-                    </table>
+                    <ngb-accordion [closeOthers]="true"  #acc="ngbAccordion">
+                      <ngb-panel *ngFor="let m of modules">
+                        <ng-template ngbPanelTitle>
+                          <span class="ft-align-justify" (click)="sendIdModule(m.id)" ><b>  {{m.nom}}</b></span>
+                        </ng-template>
+                        <ng-template ngbPanelContent>
+                          <table show-filter="true" class="table">
+                            <thead>
+                            <tr>
+                              <th>Question</th>
+                              <th>Operations</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr
+                              *ngFor="let q of QuestionsByModule |filter: searchText | paginate: { itemsPerPage: 6, currentPage: p}">
+                              <td> {{q.questionName}}</td>
+                              <td>
+                                <a class="primary" data-original-title="" title=""
+                                   (click)="open(content,q.questionName,q.id)">
+                                  <i class="ft-eye font-medium-3 mr-2"></i>
+                                </a>
+                                <a class="success p-0" data-original-title="" title="" (click)="onUpadate(q.id)">
+                                  <i class="ft-edit-2 font-medium-3 mr-2"></i>
+                                </a>
+                                <a class="danger" data-original-title="" title="" (click)="onDelete(q)">
+                                  <i class="ft-trash font-medium-3"></i>
+                                </a>
+                              </td>
+                            </tr>
+                            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                            </tbody>
+                          </table>
+                        </ng-template>
+                      </ngb-panel>
+                    </ngb-accordion>
+
+
+
                     <!--Questions Ends-->
                   </div>
                 </div>
