--- a/src/app/pages/videos/update-video/update-video.component.html
+++ b/src/app/pages/videos/update-video/update-video.component.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
-  <div class="app-sidebar" data-active-color="white" data-background-color="black" data-image="assets/img/sidebar-bg/01.jpg">
+  <div class="app-sidebar" data-active-color="white" data-background-color="black"
+       data-image="assets/img/sidebar-bg/01.jpg">
     <app-sidebar></app-sidebar>
     <div class="sidebar-background"></div>
   </div>
@@ -20,24 +21,32 @@
                       <!--List videos start-->
 
                       <div class="modal-body">
-                          <div class="form-group">
-                            <label class="control-label">Video Name: </label>
-                            <input class="form-control" [(ngModel)]="video.name" type="text" name="name" required/>
-                          </div>
-                          <div class="form-group">
-                            <label class="control-label">URL: </label>
-                            <input class="form-control" [(ngModel)]="video.url" type="text" name="url" #url="ngModel" url required/>
-                            <p class="alert alert-danger" *ngIf="url?.errors?.url">Enter a valid url</p>
-                          </div>
-                          <div class="form-group">
-                            <label class="control-label">Description:</label>
-                            <textarea class="form-control" [(ngModel)]="video.description"  type="text" name="description" required></textarea>
-                          </div>
-                          <div class="form-group">
-                            <button type="button"  data-dismiss="modal" class="btn btn-success" (click)="updateVideo()" [disabled]="url?.errors?.url">Submit</button>
+                        <select class="form-control" [(ngModel)]="moduleName" name="module"  (change)="update()">
+                          <option *ngFor="let m of modules" [ngValue]="m.nom" >{{m.nom}}</option>
+                        </select>
+                        <br>
+                        <div class="form-group">
+                          <label class="control-label">Video Name: </label>
+                          <input class="form-control" [(ngModel)]="video.name" type="text" name="name" required/>
+                        </div>
+                        <div class="form-group">
+                          <label class="control-label">URL: </label>
+                          <input class="form-control" [(ngModel)]="video.url" type="text" name="url" #url="ngModel" url
+                                 required/>
+                          <p class="alert alert-danger" *ngIf="url?.errors?.url">Enter a valid url</p>
+                        </div>
+                        <div class="form-group">
+                          <label class="control-label">Description:</label>
+                          <textarea class="form-control" [(ngModel)]="video.description" type="text" name="description"
+                                    required></textarea>
+                        </div>
+                        <div class="form-group">
+                          <button type="button" data-dismiss="modal" class="btn btn-success" (click)="updateVideo()"
+                                  [disabled]="url?.errors?.url">Submit
+                          </button>
 
-                            <button type="button" class="btn btn-danger" (click)="close()">Close</button>
-                          </div>
+                          <button type="button" class="btn btn-danger" (click)="close()">Close</button>
+                        </div>
                       </div>
                       <hr>
                       <!-- List videos Ends-->
