--- a/src/app/pages/documentation/upload/documentation.component.html
+++ b/src/app/pages/documentation/upload/documentation.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper" xmlns="http://www.w3.org/1999/html">
   <div class="app-sidebar" data-active-color="white" data-background-color="black" data-image="assets/img/sidebar-bg/01.jpg">
     <app-sidebar></app-sidebar>
     <div class="sidebar-background"></div>
@@ -18,26 +18,22 @@
                     <!--UploadFole Starts-->
                     <section id="file-upload">
                      <div class="card">
+                       <br>
+                         <label>Choose Module :
+                           <select  class="form-control" [(ngModel)]="ModuleName" name="module">
+                             <option *ngFor="let m of modules" [ngValue]="m">{{m.nom}}</option>
+                           </select></label>
                        <div class="card-header">
                          <h4>Upload Documents</h4>
                        </div>
                        <div class="card-block">
+                         <!-- Drop zone Starts-->
                          <div class="row">
-                           <!-- Drop zone Starts-->
                            <div class="col-md-12 col-lg-6">
                              <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)" [uploader]="uploader" class="py-5 mb-3 text-center font-medium-5 text-uppercase grey my-drop-zone">
                                 Dropzone
                              </div>
                            </div>
-                           <!-- Drop zone Ends-->
-                           <!-- Choose File Starts-->
-                           <!--   <div>
-                                <input type="file"
-                                      (change)="handleFileInput($event.target.files)">
-
-                                 <button type="button" class="btn btn-success" (click)="uploadFileToActivity()"> Upload </button>
-                              </div>-->
-                             <!-- Choose File Ends-->
                          </div>
                          <div class="row">
                            <div class="col-md-3">
@@ -62,7 +58,7 @@
                                <tr *ngFor="let item of uploader.queue">
                                  <td><strong>{{ item?.file?.name }}</strong></td>
                                  <td nowrap>
-                                   <button type="button" class="btn btn-raised btn-success btn-sm" (click)="item.upload()" (click)="upload(item._file)" [disabled]="item.isReady || item.isUploading || item.isSuccess">
+                                   <button type="button" class="btn btn-raised btn-success btn-sm" (click)="upload(item._file)" [disabled]="item.isReady || item.isUploading || item.isSuccess">
                                      <span class="fa fa-upload"></span> Upload
                                    </button>
                                    <button type="button" class="btn btn-raised btn-danger btn-sm" (click)="item.remove()">
@@ -76,7 +72,7 @@
                                <p>Queue progress:
                                  <ngb-progressbar type="primary" [value]="uploader.progress"></ngb-progressbar>
                                </p>
-                               <button type="button" class="btn btn-raised btn-success" (click)="uploader.uploadAll()" (click)="uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
+                               <button type="button" class="btn btn-raised btn-success" (click)="uploadAll()" [disabled]="!uploader.getNotUploadedItems().length">
                                  <span class="fa fa-upload"></span> Upload all
                                </button>
                                <button type="button" class="btn btn-raised btn-warning" (click)="uploader.cancelAll()" [disabled]="!uploader.isUploading">
